Thu Feb  1 20:27:09 2007  Tim Janik  <timj@gtk.org>

	* birnetdebugtools.hh, birnetdebugtools.cc: added DebugChannel, a 
	reference counted interface which allows sending of debug messages.
	if a debug channel is created with new_from_file_async(), printing
	a message happens in constant time in the calling thread, and the
	debugging output is written into a file by a background thread.

	* tests/threads.cc: added simply DebugChannel test.

Mon Jan 29 23:29:27 2007  Tim Janik  <timj@gtk.org>

	* examples/mkhost.sh: generate Makefile.decl with slowcheck: and perf:
	rules. also generate report: rule which runs all of check: slowcheck:
	and perf: and generates a report.out file.

Mon Jan 29 22:46:40 2007  Tim Janik  <timj@gtk.org>

	* birnet/birnetthread.hh: made read_barrier() and write_barrier() a NOP 
	on systems that don't need barriers. provided full_barrier().

	* birnetthread.cc: fixed a bad bug in atomic_int_set() and 
	atomic_pointer_set() which caused atomic values to temporarily be 0.

	* birnet/birnetcdefs.h: provide memory barrier implementations based on atomic ops.

	* birnet/Makefile.am: define BIRNET_MEMORY_BARRIER_NEEDED in birnetconfig.h.

	* configure.inc: provide BIRNET_MEMORY_BARRIER_NEEDED=[01] based on 
	glib's G_ATOMIC_OP_MEMORY_BARRIER_NEEDED.

Sun Jan 28 19:31:12 2007  Tim Janik  <timj@gtk.org>

	* fixed various compiler warnings.

Sun Jan 28 19:05:51 2007  Tim Janik  <timj@gtk.org>

	* birnetthread.hh: provide read and write memory barriers:
	Atomic::read_barrier(), Atomic::write_barrier().
	Atomic::RingBuffer: prevent class copies, fixed destructor, use
	std::copy() for fast memory copies and added missing barriers;
	fixes suggested by Stefan Westerfeld.

	* tests/threads.cc: fixed contention handling in ring buffer tests.

Thu Jan 25 02:43:28 2007  Tim Janik  <timj@gtk.org>

	* tests/threads.cc: give up CPU if ring buffer reader/writer
	are busy spinning. this speeds up tests on single-CPU systems
	significantly.
