@@ -54,12 +54,15 @@ struct DebugChannelFileAsync : public virtual DebugChannel, public virtual Threa
   printf_valist (const char *format,
                  va_list     args)
   {
-    char buffer[8192];
-    int l = vsnprintf (buffer, sizeof (buffer), format, args);
+    const int bsz = 8192;
+    char buffer[bsz + 2];
+    int l = vsnprintf (buffer, bsz, format, args);
     if (l > 0)
       {
-        l = MIN (l + 1, (signed) sizeof (buffer) - 1);
-        buffer[l] = 0;
+        l = MIN (l, bsz);
+        if (buffer[l - 1] != '\n')
+          buffer[l++] = '\n';
+        buffer[l++] = 0;
         uint n = aring.write (l, buffer, false);
         if (!n)
           Atomic::uint_swap_add (&skip_count, 1);
